<resources>
    <string name="app_name">QueComer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_bt_log_out">Cerrar Sesion</string>
    <string name="login_it_user">Usuario</string>
    <string name="login_it_password">Contraseña</string>
    <string name="login_bt_login">Iniciar</string>
    <string name="login_bt_google">Google</string>
    <string name="login_bt_facebook">FaceBook</string>
    <string name="login_bt_register">Registrarse</string>
    <string name="default_web_client_id_google">1070906347090-ma0v42v9m0im9dihb8he83d5qijtrovg.apps.googleusercontent.com</string>
    <string name="password_error">"La contraseña debe tener almenos 1 numero  1 letra y 8 caracteres"</string>
    <string name="email_error">Email Invalido</string>
    <string name="confirmed_errorr">Las contraseñas no son iguales</string>


</resources>